# discord-video-embed-bot

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  TEAM_GENERATOR_README.md  bot.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  test_teams.py
cogs/: team_manager.py  video_embed.py
tests/: test_teams.py
utils/: logger.py  team_generator.py  video_downloader.py
